refactor: update fund import logic and enhance error handling; add network configuration in docker-compose